lib/tests/fixtures/compiler/evaluation/plus_bad_left_string.baseline
Error: plus_bad_left_string.pp:1:8: node 'test': string 'foo' cannot be converted to Integer.
  notice('foo' + 1)
         ^~~~~
  backtrace:
    in '<class main>' at plus_bad_left_string.pp:1
